# parakeet-tdt-0.6b-v2-fastapi

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
parakeet_service/: audio.py  batchworker.py  chunker.py  config.py  routes.py  schemas.py  streaming_vad.py
