[project]
name = "parakeet-tdt-fastapi"
version = "0.0.1"
description = "High-accuracy English speech-to-text FastAPI service using NVIDIA Parakeet TDT 0.6B v2"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "pydantic",
    "omegaconf",
    "python-multipart",
    "ffmpeg-python",
    "python-dotenv",
    "soundfile",
    "librosa",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parakeet_service"]

# Use the PyTorch CUDA 12.8 index when installing with uv
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
